Mostly tidy up ML section

--- a/ECS.bib
+++ b/ECS.bib
@@ -134,3 +134,14 @@ mBed thing claiming to be datasheet but isn't
 	title = {Data Sheet for the {LPC11U2x}},
 	url = {http://www.nxp.com/documents/data_sheet/LPC11U2X.pdf}
 }
+
+Kappa statistic
+@article{viera2005understanding,
+	title={Understanding interobserver agreement: the kappa statistic},
+	author={Viera, Anthony J and Garrett, Joanne M and others},
+	journal={Fam Med},
+	volume={37},
+	number={5},
+	pages={360--363},
+	year={2005}
+}
