Added Planning Section

--- a/management/division.tex
+++ b/management/division.tex
@@ -1,6 +1,7 @@
-\section{Division of Responsibilities}
+\section{Division of Responsibilities} \ref{sec:division}
 
 At the group's first meeting, the project brief was agreed and then split to smaller tasks which could be more easily planned. These were: designing the algorithm, implementing the algorithm on the embedded platform, designing and building the hardware components of the system, and performing the user study and associated ethical approval request.
 
 Assigning these tasks to individual members proved a simple task, as each member's interests mapped cleanly to each area. Mohit Gupta and Calin Pasat, as the group's two individuals coming from an Electronic Engineering programme, were to take charge of the hardware aspects of the project. Daniel Playle has the most experience with Machine Learning and as such he would lead the background research and algorithm training part of the task. The majority of the development was to be completed by Emily Shepherd, who is the strongest in the group at C programming, particularly when focusing at optimisations. Toby Finch, as the remaining first class Computer Scientist, was to join Emily in development and take the lead with the user study and ethical approval process.
 
+Later in the project, when it was decided to work on both the FPGA and mBed, the Hardware section was further divided, with Calin focusing on the FPGA and Mohit working on the mBed. The Software Development responsibilities were also clarified after the research phase, as it was now better understood what the requirements would be: Emily would mainly work on the low-level algorithm and library optimisations, while Toby was in charge of the higher level, application-specific heuristic development.
