--- a/management/planning.tex
+++ b/management/planning.tex
@@ -1,3 +1,15 @@
-\section{Planning}
+\namedsection{Planning}{Shepherd}
 
-The proposed Gantt Charts for this project are listed in Appendix \ref{ch:gantt}.
+Once the work had been split into individual units, as discussed above in section \ref{sec:division}, the team worked on the proposed Gantt charts for the project timeline. This required managing the work itself, but also setting aside time to work on the write up of the report, and preparation for the two Progress Seminars. It also had to take into account the University's timetable, so that other committments such as exams and courseworks could be avoided.
+
+This section first details the proposed plans that were made at the beginning of the project (these can be viewed as Gantt charts in Appendix \ref{ch:gantt}) and then compares this with the realised progress and time management.
+
+\subsection{Proposed Plan}
+
+As the two progress seminars divided the term into roughly equal segments, it seemed sensible to set milestones for these to provide a framework around which to plan; this also ensured the content for each seminar was clearly defined in advance. As such, the group planned to complete the majority of background research and administrative work before the first seminar. This included applying for ethical approval, designing the hardware schematics, and ordering all the required components.
+
+Directly after the progress seminar, the movement study would be conducted, allowing the software subteam to begin work on the development of the algorithm. During this, the hardware would be built, with the aim of having this completed two weeks prior to the second progress seminar, providing time to deploy the code onto the system and solve any problems which may arrive.
+
+After the final progress seminar, the team planned to perform a second movement study to gauge the accuracy of the device, and perform any required changes in the weeks leading up to the Christmas break. This would allow the weeks during the holiday, and the time in term 2 to be spent focusing on writing the report.
+
+\subsection{Realised Timeline}
