Fixed Division Heading

--- a/management/division.tex
+++ b/management/division.tex
@@ -1,4 +1,4 @@
-\section{Division of Responsibilities} \ref{sec:division}
+\namedsection{Division of Responsibilities}{Shepherd} \label{sec:division}
 
 At the group's first meeting, the project brief was agreed and then split to smaller tasks which could be more easily planned. These were: designing the algorithm, implementing the algorithm on the embedded platform, designing and building the hardware components of the system, and performing the user study and associated ethical approval request.
 
