Starts on the results section

--- a/results/power.tex
+++ b/results/power.tex
@@ -1,2 +1,8 @@
-\namedsection{Clock Speed and Power Consumption}{Gupta?}
+\namedsection{Clock Speed and Power Consumption}{Gupta}
 
+The requirements for this project are that the processor operates at a low operating frequency, somewhere in the range 100 kHz - 2 MHz. It is also an aim to minimise the power consumption of the system. 
+
+The device operates at a frequency of 166 kHz which is on the lower side of the range, this gives room for the frequency to increase whilst staying in the range giving room for more actions should they be required.
+
+With the sensor running at $861\mu W$, it can be considered as a low power device. 
+\note{Elaborate a LOT more}
