--- a/management/planning.tex
+++ b/management/planning.tex
@@ -13,3 +13,9 @@ Directly after the progress seminar, the movement study would be conducted, allo
 After the final progress seminar, the team planned to perform a second movement study to gauge the accuracy of the device, and perform any required changes in the weeks leading up to the Christmas break. This would allow the weeks during the holiday, and the time in term 2 to be spent focusing on writing the report.
 
 \subsection{Realised Timeline}
+
+As with all projects, external factors meant the team were not able to fully stick to the proposed project plans. The first delay was that the Research Governance Officer required further information about the dates surrounding the study and as such weren't able to approve the request immediately. As can be seen from Figure \ref{table:gantt:term11}, the movement study was placed early after the seminar, so there was time to make up the lost time despite the fact the lack ethical approval delay forced the movement study to be pushed back. However, this did delay the beginning of software development, as without the movement study results, the team were not able to accurately train a model.
+
+A second unexpected factor is that it took the group longer to agree with the supervisors over which platform should be used: the FPGA or the mBed. After a meeting with the customer, the decision was made to use both the FPGA and the mBed. This meant the work on the hardware development was not able to be completed prior to the second progress seminar, as the start of hardware work had been delayed slightly by the discussion and the decision resulted in the hardware team being effectively split in half, leaving fewer people to work on each platform.
+
+Despite the fact the team was able to recover from the two set backs detailed above, completing a working prototype in good time before the end of the project, the delays that these caused meant the group did not have time to complete the second movement study, and as such were not able to formally prove the effectiveness of the algorithm.
