Switched hardware schematics to LaTeX

--- a/hardware/finaldesign.tex
+++ b/hardware/finaldesign.tex
@@ -4,12 +4,12 @@
 
 \begin{figure}
 	\centering
-	\includegraphics[scale=.8]{hardware-schematics-development-2.png}
+	\includegraphics{hardware-schematics-development-2.pdf}
 	\caption{Final Hardware Block Diagram - Development}
 \end{figure}
 
 \begin{figure}
 	\centering
-	\includegraphics[scale=.8]{hardware-schematics-final-2.png}
+	\includegraphics{hardware-schematics-final-2.pdf}
 	\caption{Final Hardware Block Diagram - Final}
 \end{figure}
