--- a/hardware/initialdesign.tex
+++ b/hardware/initialdesign.tex
@@ -6,14 +6,14 @@ Figure~\ref{fig:hardware_schematic_development} shows the block diagram for the 
 
 \begin{figure}
 	\centering
-	\includegraphics[scale=.8]{hardware-schematics-development.png}
+	\includegraphics{hardware-schematics-development.pdf}
 	\caption{Hardware Block Diagram - Development}
 	\label{fig:hardware_schematic_development}
 \end{figure}
 
 \begin{figure}
 	\centering
-	\includegraphics[scale=.8]{hardware-schematics-final.png}
+	\includegraphics{hardware-schematics-final.pdf}
 	\caption{Hardware Block Diagram - Final}
 	\label{fig:hardware_schematic_final}
 \end{figure}
