--- a/study/study.tex
+++ b/study/study.tex
@@ -5,12 +5,12 @@ Apart from performing the actual optimisations on the algorithm, another importa
 
 The data which is involved are the readings from sensors which are attached to the body of a person when they are performing the exercises. As it is the intention for the system to be used by many different people who travel in planes, it was decided to gather the training data using a user study. This is because each individual has slight variations in the way they perform exercises so in order to improve the robustness of the system we collected movement data from 20 different people. This movement data could then be combined as the training data to form a model capable of correctly classifying exercises for most people.
 
-\section{Study Preparation}
+\namedsection{Study Preparation}{Finch}
 Before performing studies involving participants who are not actually members of the project it is required to gain ethical approval. This is a requirement put in place from the University of Southampton and also covers the legal requirement of data protection when dealing with participant’s personal data. Faculty ethics committees review applications for ethical approval and once they are approved insurance and legal cover is provided. Therefore, it is highly important to follow the approval process as it helps to make sure there is enough detail and planning in the study to help keep participants safe.
 
 To get advice with the application process, contact was made with the University of Southampton Safety and Occupational Health department <ref>. In a meeting between the groups user study lead and members of SOH it was decided that the study should take place in a private room where there would not be any interruptions and assistance was provided with booking a lab room in the Phycology department for this purpose. Further assistance was also given for finding the contact details of first aiders.
 
-\section{Ethical Approval Process}
+\namedsection{Ethical Approval Process}{Finch}
 Throughout the application process, heavy reference was made to the instructions and guideline documents provided by the Ethics and Research Governance Online website <ref>. One of the key things that are used to classify studies are study characteristics which are a list of areas where potential risks could be introduced ranging from low to high likelihood. As our study involved wearable technology, this counted as being intrusive which in turn meant there was a risk of harm and these are two medium risk study characteristics.
 
 This meant that the user study had to provide consent forms so that participants could provide their consent for taking part in writing. However, this also meant that personal data was collected in the study which caused another study characteristic to be matched.
@@ -19,7 +19,7 @@ Overall, this required several documents to be submitted as part of the ethics a
 
 In this project, there were two areas where user studies could have been required. One was to collect movement data to train the algorithm by generating a model as already mentioned. The other area was to perform a user study to test the final system and measure its accuracy. As applying for ethics approval is a very time consuming process, it was decided to incorporate both areas into a single study. This was possible because both areas involve the participants performing exactly the same actions, it was only what was being recorded that changed. This was made clear throughout the ethics application which eventually led to it being approved.
 
-\section{During the Study}
+\namedsection{During the Study}{Finch}
 In the end, only the first area of the user study was performed for collecting movement data to train the algorithm. Specifically, accelerometer and gyroscope sensor data was required to be collected so that the effectiveness of the two at training the algorithm and accurately classifying exercises could be compared.
 
 At this stage in the project, the prototype device was not yet ready to be used to record the movement data so a mobile phone with inbuilt accelerometer and gyroscope sensor was used instead. The Physics Toolbox Suite Version 1.4.4 app <ref> was used to record data directly from the phones sensors by allowing us to choose which sensors to use.
