--- a/software/machine-learning.tex
+++ b/software/machine-learning.tex
@@ -129,7 +129,8 @@ The number of classes to classify was considered as a variable parameter for the
 
 \note{What classification algorithms were trialled? What kind of results were achieved with these. Explain and discuss the workings of each algorithm / type of algorithm.}
 
-\subsection{Multilayer Perceptrons}
+\subsection{Considered Algorithms}
+\subsubsection{Multilayer Perceptrons}
 A Multilayer Perceptron (MLP) is a type Neural Network, where the nodes, or perceptrons, are organised in layers. Each node accepts some number of inputs with some weight. These summation of these weighted inputs are computed and applied to some activation function, the result of which is the output of the node (equation \ref{eq:perceptron}).
 
 \begin{equation}
@@ -176,10 +177,17 @@ Each perceptron affectively defines a plane in $d$-dimensional space. Instances 
 	\caption{Example topology of a MLP \label{fig:mlp-topology}}
 \end{figure}
 
-\subsection{Radial Basis Function Networks}
-A Radial Basis Function (RBF) network is a type of Neural Network that is composed of 2 layers, an input layer and an output layer. The activation functions for this output layer are RBFs. An RBF can be any function that is only dependent on the distance from some point. An example of a commonly used RBF is the Gaussian function. \todo{Finish}
+\subsubsection{Radial Basis Function Networks}
+A Radial Basis Function (RBF) network is a type of Neural Network that is composed of 2 layers, an input layer and an output layer. The activation functions for this output layer are RBFs. An RBF can be any function that is only dependent on the distance from some point. An example of a commonly used RBF is the Gaussian function. 
 
-\subsection{Instance-Based Learning}
+RBF networks are quite similar to MLPs, with the main difference being hidden layers and the activation function. For the RBF network, as a Gaussian function is typically used, this can be troublesome for constrained systems, as the need to compute the probability density function for each RBF can require significant resources. Equation \ref{eq:mvg} shows the formula for computing the probability density function for a multivariate Gaussian distribution, which for a large number of inputs to the machine learning algorithm will result in having to compute this formula in as many dimensions. An approximation of this formula can be made, but an implementation on a constrained device would prove challenging, as the approximation results in a higher memory usage.
+
+\begin{equation}
+	pdf(\mathbf{x}) = (2\pi)^{-\frac{k}{2}}|\mathbf{\Sigma}^{-\frac{1}{2}}|e^{-\frac{1}{2}(\mathbf{x}-\mathbf{\mu})'\mathbf{\Sigma^{-1}}(\mathbf{x}-\mathbf{\mu})}
+	\label{eq:mvg}
+\end{equation}
+
+\subsubsection{Instance-Based Learning}
 Instance-based learning is a type of machine learning algorithm that postpones model creation until an output for a problem instance is required. Some number of labelled instances are stored in memory, and these are used to label problem instances.
 
 Instance-based learning is advantageous over other machine learning methods in that adapting the model with new instances is trivial. This makes it attractive for simple systems where some adaptation of the model is required.
@@ -198,7 +206,16 @@ Each machine learning algorithm comes with its own memory-processing-accuracy tr
 \note{Selection of the algorithm - mention hidden layers  /frequency}
 There are many parameters that affect the performance of classifiers. In the case of the collected data, the sampling frequency for the kinematic sensor and the window with a number of samples over which the classifier classifies have a direct impact on the classifier's ability to perform. In the case of the model, most machine learning algorithms have some form parameters allowing their behaviour to change. 
 
-As the MLP was \todo{Finish}
+\begin{figure}
+	\centering
+	\subfigure[Top-Down]{\label{fig:mlp-multi-flat}\includegraphics[width=70mm]{figures/mlp-multi-analysis-flat.pdf}}
+	\subfigure[Side-On, Varying Hidden Layers]{\label{fig:mlp-multi-3d}\includegraphics[width=64mm]{figures/mlp-multi-analysis-3d.pdf}}
+	%\subfigure[Varying Frequency]{\label{fig:mlp-multi-3d-2}\includegraphics[width=70mm]{figures/mlp-multi-analysis-3d-2.pdf}}
+	\subfigure[3D Surface Plot]{\label{fig:mlp-multi-3d-3}\includegraphics[width=90mm]{figures/mlp-multi-analysis-3d-3.pdf}}
+	\caption{MLP Parameter Performance Surface Plot \label{fig:mlp-multi}}
+\end{figure}
+
+For the MLP, the number of hidden layers is the most important parameter, so analysis on this and the sampling frequency was performed, as shown in figure \ref{fig:mlp-multi}, where the performance is plotted as a function of both of these parameters. Figure \ref{fig:mlp-multi-flat} shows that above 6 hidden layers while sampling at around 20Hz, performance roughly levels out. An interesting observation can be seen in figure \ref{fig:mlp-multi-3d}, where the performance for 1 hidden layer was significantly worse than 0 hidden layers.
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 %%% USER STUDY RESULTS %%%
@@ -207,18 +224,11 @@ As the MLP was \todo{Finish}
 \note{As a result of the user study, how did the results change? Note observed results due to the user study.}
 The user study was performed on a number \todo{How many?} subjects, where both accelerometer and gyroscope data was collected for multiple activities.
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%% ALGORITHM SELECTION %%%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%
-The main contenders for the algorithm were the MLP and RBF network due to high performance while having relatively low complexity, allowing them to be implemented on a constrained device without too much difficulty. Between these two algorithms, there was minimal difference in terms of 
-
 \begin{figure}
 	\centering
-	\subfigure[Top-Down]{\label{fig:mlp-multi-flat}\includegraphics[width=70mm]{figures/mlp-multi-analysis-flat.pdf}}
-	\subfigure[Side-On, Varying Hidden Layers]{\label{fig:mlp-multi-3d}\includegraphics[width=64mm]{figures/mlp-multi-analysis-3d.pdf}}
-	%\subfigure[Varying Frequency]{\label{fig:mlp-multi-3d-2}\includegraphics[width=70mm]{figures/mlp-multi-analysis-3d-2.pdf}}
-	%\subfigure[Varying Both]{\label{fig:mlp-multi-3d-3}\includegraphics[width=70mm]{figures/mlp-multi-analysis-3d-3.pdf}}
-	\caption{MLP Parameter Performance Surface Plot \label{fig:mlp-multi}}
+	\includegraphics[width=70mm]{figures/data-jump.pdf}
+	\note{This figure may be better off in the data collection section}
+	\caption{Poor data collection showing unstable sampling\label{fig:data-jump}}
 \end{figure}
 
 \begin{figure}
@@ -251,8 +261,9 @@ Further analysis of the subject performance results show a large difference in p
 	\caption{Result classes statistical significance \label{tab:res-ttest}}
 \end{table}
 
-A noteworthy observation about the results was that the performance of the algorithm was initially poor, by any measure, after the first day data collection, giving just 5 \todo{Really?} subjects to model against. However, as the number of subjects increased, so did the performance of the system. This would indicate that the algorithm was overfitting on subjects, and that the introduction of more subjects was able to at least in part negate this overfitting.
+A noteworthy observation about the results was that after the first day of data collection, the performance of the model produced on this data was very poor. However, as the number of subjects increased after successive data collection days, so did the performance of the system. This would indicate that the algorithm was not able to fit properly on a small number of subjects, and that the introduction of more subjects was able to at least in part negate this.
 
-\note{What parameters are there and how did they affect the accuracy of the system?}
-
-\note{Still need to add RBF stuff...}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%% ALGORITHM SELECTION %%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%
+The main contenders for the algorithm were the MLP and RBF network due to high performance while having relatively low complexity, allowing them to be implemented without too much difficulty. Between these two algorithms, there was only a slight performance decrease in favour of the RBF network under some conditions, however, given the complexity of the RBF network's requirement for computing RBFs, this could create issues, especially given hardware constraints regarding floating point numbers. On the other hand, the MLP is very simple and approximations can be made such that only integers are required. For this reason, the MLP was selected to be used. As seen previously, 20Hz appeared to be the optimal sampling frequency, so this was selected to be used. The number of hidden layers is a trade-off between resources and performance, and it was decided that 2 hidden layers would provide sufficient performance while allowing for a reasonable demonstration of constrained machine learning.
