Project Management stuffs

--- a/management/management.tex
+++ b/management/management.tex
@@ -4,4 +4,5 @@ Careful planning and management is always important for large projects, and none
 
 \input{management/division}
 \input{management/planning}
+\input{management/tools}
 \input{management/client}
