--- a/results/power.tex
+++ b/results/power.tex
@@ -5,4 +5,5 @@ The requirements for this project are that the processor operates at a low opera
 The device operates at a frequency of 166 kHz which is on the lower side of the range, this gives room for the frequency to increase whilst staying in the range giving room for more actions should they be required.
 
 With the sensor running at $861\mu W$, it can be considered as a low power device. 
-\note{Elaborate a LOT more}
+
+\note{maybe move how to get this value here}
