Created appendix giving source dir structure

--- a/report.tex
+++ b/report.tex
@@ -16,6 +16,7 @@
 \usepackage{tikz}
 \usetikzlibrary{shapes,automata,positioning}
 \usepackage{gensymb}		% For extra symbols such as Ohm
+\usepackage{dirtree}
 \lstset{language=C}
 
 \hypersetup{colorlinks=true}   % Set to false for black/white printing
@@ -97,6 +98,7 @@
 
 	\appendix
 	\input{appendices/brief}
+	\input{appendices/source}
 	\input{appendices/risks}
 	\input{appendices/gantt}
 	%
