--- a/hardware/mbed.tex
+++ b/hardware/mbed.tex
@@ -157,7 +157,34 @@ The model employed requires a set sampling rate, and to minimise the communicati
 
 It was decided that the duty cycle of the I2C clock is 50\%, hence the value of SCLL and SCLH should be the same. A similar method, from when measuring the frequency of the oscillator with varying voltage via a pin, was used where the frequency of the pin is half the sampling rate. This because in one cycle of the pin, it goes through the while loop twice and the sensor is queried once each loop.
 
+\subsection{Measuring power}
+
+It is required to measure the power of the system as a requirement is for it to be low powered as the sub threshold processor will be operating at a low power. It was deemed unnecessary to measure the power consumption of the mBed because of the various peripherals which are also powered which would not be there on the sub threshold version as well as the fact that this processor is not designed for sub threshold power and the method ARM implement to achieve this may leave a different power fingerprint than the Cortex M0. 
+
+The sensor however does not fall under the same conditions and thus, was analysed for its power usage. To do this a 100\ohm ~resistor was placed in series between the sensor and $V_{cc}$. Thus current would have to flow through the resistor to reach the sensor, allowing to measure the current by measuring the voltage across the resistor along with the relationship V=IR.
+
+The power consumption of the sensor is not constant over time due to the fact that the sensor alternates between sleep mode and being awake. It also will consume more power when communicating over I2C as opposed to not. To account for this, the current and voltage is measured over time which is then averaged thus, giving the average power consumed by the sensor.
+
+\begin{table}
+	\centering
+	\begin{tabular}{|l|r|r|}
+		\hline
+		Parameter & Mean Value & Standard Deviation \\
+		\hline
+		Resistor Voltage (V) & 0.0262 & 0.00198 \\
+		Sensor Voltage (V) & 3.29 & 0.00133 \\
+		Current (A) & 0.000262 & \\
+		Power (W) & 0.00086198 & \\
+		\hline
+	\end{tabular}
+	\caption{Power statistics for the sensor}
+	\label{tab:power}
+\end{table}
+
+As can be seen from Table~\ref{tab:power}, the sensor on average took $861\mu W$ which can be considered low power. However, there is the potential for a lower power consumption, within the configuration used, the current flowing through the sensor was $262\mu A$, but the data sheet for the sensor says for the sampling rate and configuration that is being used, the typical value is $70\mu A$. This decrease would reduce the power consumption by over a factor of 3 leaving a power usage of $230\mu W$.
+
 \note{Limitations of mBed, e.g. hardware divide, floating point arithmetic}
 \note{Configuring Watchdog Oscillator for main clock}
 \note{SPI mBed library cannot be compiled because it is bigger than the flash memory}
 \note{Bitshifting gives random outputs fun -- little endian}
+\note{Talk about the prototype board}
